# oidc-idp-server

./: .bazelrc  .gcloudignore  .gitignore  BUILD  Dockerfile  MODULE.bazel  README.md  Taskfile.dist.yml  extensions.bzl  maven.yml  oidc_idp_server  pom.xml  repositories.bzl
.tasks/: docker.yml  local.yml  maven.yml  tools.yml
gae/: .gcloudignore  app.yaml  oidc_cloudbuild.yaml
src/main/java/dev/chux/idp/oidc/: OidcController.java  OidcServer.java  OidcServerProperties.java  User.java
src/main/java/dev/chux/oidc/: OidcController.java  OidcServer.java  OidcServerProperties.java  User.java
src/main/resources/: application.yml
templates/: app.yaml  cloudbuild.yaml
